FILE(GLOB Sources "*.h" "*.cpp")
ADD_LIBRARY(SparkPlug_ImageIo ${Sources})

TARGET_LINK_LIBRARIES(SparkPlug_ImageIo SparkPlug_Core)

FIND_PACKAGE(ZLIB REQUIRED)

FIND_PACKAGE(PNG REQUIRED)
	ADD_DEFINITIONS(${PNG_DEFINITIONS})
	INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS} ${PNG_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(SparkPlug_ImageIo ${ZLIB_LIBRARIES} ${PNG_LIBRARIES})


FILE(GLOB PublicHeaders RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
SET_TARGET_PROPERTIES(SparkPlug_ImageIo PROPERTIES PUBLIC_HEADER "${PublicHeaders}")

INSTALL(TARGETS SparkPlug_ImageIo
    RUNTIME DESTINATION bin
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    PUBLIC_HEADER DESTINATION "include/SparkPlug/ImageIo"
)
